--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+                <dependency>
+   			 <groupId>org.sonarsource.scanner.maven</groupId>
+    			 <artifactId>sonar-maven-plugin</artifactId>
+    			 <version>3.10.0.2594</version>
+		</dependency> 		
 		<dependency>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-starter-actuator</artifactId>
