--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
             	</activation>
             	<properties>
                 	<!-- Optional URL to server. Default value is http://localhost:9000 -->
-                	<sonar.host.url> http://localhost:9000 </sonar.host.url>	
-			 <sonar.host.url> http://localhost:9000 </sonar.host.url> 
+                	<sonar.host.url> http://194.163.130.156:9000/ </sonar.host.url>	
+			 <sonar.host.url> http://194.163.130.156:9000/ </sonar.host.url> 
             	</properties>
         	</profile>
      	</profiles>
